PharmaDemo/src/objects/SFDC_Plan2User__c.object
<CustomObject>
    <description>Connector object that ties an Account Plan to a User.</description>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Business Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Liason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NHS Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Acct_Plan__c</fullName>
        <label>Business Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Business Plan Team</relationshipLabel>
        <relationshipName>R00Nj0000003oDLrEAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <formula>User__r.FirstName  &amp; &quot; &quot;&amp;  User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00Nj0000003oDM1EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot;, &quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Business Plan Team</label>
    <nameField>
        <label>Team Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Plan Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>